fix: change download dir in settings.json

--- a/config/mediarr/transmission/settings.json
+++ b/config/mediarr/transmission/settings.json
@@ -17,13 +17,13 @@
     "cache-size-mb": 4,
     "default-trackers": "",
     "dht-enabled": true,
-    "download-dir": "/data2/downloads",
+    "download-dir": "/data/downloads",
     "download-queue-enabled": true,
     "download-queue-size": 5,
     "encryption": 1,
     "idle-seeding-limit": 30,
     "idle-seeding-limit-enabled": false,
-    "incomplete-dir": "/data/torrents/incomplete",
+    "incomplete-dir": "/data/downloads/incomplete",
     "incomplete-dir-enabled": false,
     "lpd-enabled": false,
     "message-level": 2,
